--- a/styles/_gameContent.scss
+++ b/styles/_gameContent.scss
@@ -1,3 +1,36 @@
 .image {
-  filter: brightness(50%);
+  filter: brightness(60%);
+}
+.background {
+  position: relative;
+  height: 350px;
+  .overlay {
+    z-index: 1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(
+      to bottom,
+      rgb(101 100 100 / 34%),
+      rgba(0, 0, 0, 0.87)
+    );
+    .text {
+      position: absolute;
+      text-align: center;
+      z-index: 1;
+      top: 100px;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 320px;
+      color: #fff;
+      h1 {
+        font-size: 30px;
+      }
+      h2 {
+        margin: 30px 0;
+        font-size: 16px;
+        padding: 0 50px;
+      }
+    }
+  }
 }
