--- a/styles/_gameContent.scss
+++ b/styles/_gameContent.scss
@@ -1,36 +1,32 @@
+#UpViewCount {
+  top: 33vh;
+  font-size: 3vh;
+}
+#DownViewCount {
+  top: 33vh;
+  font-size: 3vh;
+}
 .image {
   filter: brightness(60%);
 }
 .background {
   position: relative;
-  height: 350px;
+  height: 50vh;
   .overlay {
     z-index: 1;
     position: absolute;
     height: 100%;
     width: 100%;
-    background: linear-gradient(
-      to bottom,
-      rgb(101 100 100 / 34%),
-      rgba(0, 0, 0, 0.87)
-    );
     .text {
       position: absolute;
       text-align: center;
       z-index: 1;
-      top: 100px;
+      top: 18vh;
       left: 50%;
       transform: translate(-50%, 0);
-      width: 320px;
+      width: 90vw;
       color: #fff;
-      h1 {
-        font-size: 30px;
-      }
-      h2 {
-        margin: 30px 0;
-        font-size: 16px;
-        padding: 0 50px;
-      }
+      font-size: 3.5vh;
     }
   }
 }
