--- a/styles/_gameContent.scss
+++ b/styles/_gameContent.scss
@@ -6,6 +6,13 @@
   top: 33vh;
   font-size: 3vh;
 }
+#Score {
+  font-size: 3vh;
+  background-color: black;
+  top: 42vh;
+  left: 9vw;
+  width: 15vw;
+}
 .image {
   filter: brightness(60%);
 }
